--- a/PARCIAL_2/api/src/main/resources/application.properties
+++ b/PARCIAL_2/api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/rest-db
-spring.datasource.username = postgres
-spring.datasource.password = postgres
+spring.datasource.url = ${DATABASE_URL}
+spring.datasource.username = ${DATABASE_USERNAME}
+spring.datasource.password = ${DATABASE_PASSWORD}
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = create
