--- a/PARCIAL_2/api/src/main/resources/application.properties
+++ b/PARCIAL_2/api/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username = ${DATABASE_USERNAME}
 spring.datasource.password = ${DATABASE_PASSWORD}
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.format_sql = false
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder = TRACE
